Added Locker deployment scenarios

--- a/locker/LockerTechReport.bib
+++ b/locker/LockerTechReport.bib
@@ -2,12 +2,28 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Chris at 2011-11-07 16:10:57 +0000 
+%% Created for Chris at 2011-11-17 11:27:15 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{rserg:8drg6,
+	Date-Added = {2011-11-17 11:26:38 +0000},
+	Date-Modified = {2011-11-17 11:26:38 +0000},
+	Institution = {University Of Cambridge},
+	Note = {Available at \url{http://www.admin.cam.ac.uk/offices/em/travel/plan/TfW_2010_Survey_Report_University_of_Cambridge.pdf}},
+	Title = {Travel for Work Survey Report},
+	Year = {2010}}
+
+@techreport{rserg:sfg,
+	Date-Added = {2011-11-17 11:23:40 +0000},
+	Date-Modified = {2011-11-17 11:27:15 +0000},
+	Institution = {University Of Cambridge},
+	Note = {Available at \url{http://www.admin.cam.ac.uk/offices/em/travel/plan/Travel_Plan_2011.pdf}},
+	Title = {Travel plan 2011},
+	Year = {2011}}
 
 @unpublished{ZDnet:cs,
 	Author = {Zack Whittaker},
